--- a/static.hzshuangmei.com/css/pc/common.css
+++ b/static.hzshuangmei.com/css/pc/common.css
@@ -14,27 +14,22 @@ table { border-collapse: collapse; }
 header .top { height: 44px; font-size: 12px; background-color: #ececec; }
 header .top .shuang_m1 { padding-top: 12px; }
 header .top .shuang_m1 .top_l { float: left; padding-left: 16px; color: #999; height: 31px; line-height: 31px; display: flex; position: relative; top: -5px; }
-
 /*header .top .shuang_m1 .top_l span:first-child { padding-right: 3px; color: rgb(69, 25, 103); }*/
-
 /*header .top .shuang_m1 .top_l span:last-child { padding-left: 9px; }*/
-
 header .top .shuang_m1 .top_l img { padding-right: 6px; }
 header .top .shuang_m1 .top_l span { padding-left: 9px; }
-
 /* 增加百度搜索框*/
 header .top .top_c { float: left; margin-left: 50px; height: 31px; line-height: 31px; top: -5px; }
 header .top .top_c .search_box { margin-top: -5px; }
-header .top .top_c form { position: relative; width: 300px; margin: 0 auto;height: 30px; }
+header .top .top_c form { position: relative; width: 300px; margin: 0 auto; height: 30px; }
 header .top .top_c input, header .top .top_c button { border: none; outline: none; }
 header .top .top_c input { width: 100%; height: 42px; padding-left: 13px; }
 header .top .top_c button { height: 31px; width: 42px; cursor: pointer; position: absolute; }
-header .top .top_c .search_box form { height: 42px; }
-header .top .top_c .search_box input { width: 250px; border-radius: 42px;transition: .3s linear; float: right; }
+header .top .top_c .search_box form { height: 31px; }
+header .top .top_c .search_box input { width: 250px; height: 31px; border-radius: 42px; background: #F9F0DA; transition: .3s linear; float: right; }
 header .top .top_c .search_box input:focus { width: 300px; }
 header .top .top_c .search_box button { background: none; top: -2px; right: 0; }
 header .top .top_c .search_box button:before { content: "\f002"; font-family: FontAwesome; color: #324b4e; }
-
 /* 增加百度搜索框*/
 header .top .shuang_m1 .top_r { float: right; padding-right: 41px; }
 header .top .shuang_m1 a { display: inline-block; }
@@ -74,7 +69,6 @@ header .sm_logo img { display: inline-block; padding-top: 7px; }
 #nav ul li:hover #project { display: block; }
 .currnet { font-weight: bold; background: #6a157d; }
 #nav>ul>li:hover { background: #6a157d; }
-
 /* 导航 案例  热门提醒 */
 #nav .nav_list:nth-child(5) span::before { content: ''; top: 5px; right: 60px; position: absolute; height: 10px; width: 10px; border-radius: 50%; background: rgb(239, 69, 80); }
 #project ul { float: left; width: 158px; margin-top: -2px; margin-left: 12px; }
@@ -105,19 +99,14 @@ nav>ul>li ul .n_button a { width: 61px; line-height: 26px; color: #fff;    /*pad
 #expert p { position: relative; top: -84px; width: 187px; height: 26px; line-height: 26px; background-color: rgba(255, 255, 255, .502); }
 .n_f { padding-right: 8px; font-size: 14px; color: #000; }
 .n_b { color: #000; }
-
 /*nav结束*/
-
 /*项目*/
-
 .banner a { display: block; }
 .banner img { vertical-align: bottom; }
 .swiper-slide img { width: 100%; }
-
 /*banner*/
 .banner .banner-pagination .swiper-pagination-bullet { display: inline-block; width: 16px; height: 16px; opacity: 1; border-radius: 100%; background: #dfdfdf; }
 .banner .banner-pagination .swiper-pagination-bullet-active { opacity: 1; background: #59277d; }
-
 /*项目*/
 .index_items { height: 285px; background-color: #f0f0f0; }
 .index_items .shuang_m1>div { float: left; width: 298px; height: 222px; margin-top: 35px; }
@@ -137,7 +126,6 @@ nav>ul>li ul .n_button a { width: 61px; line-height: 26px; color: #fff;    /*pad
 .index_items .shuang_m1>div:nth-child(3) ul { margin-top: 20px; }
 .index_items .shuang_m1>div:last-child ul { margin-top: 20px; }
 #expert i { position: relative; top: -86px; left: 79px; display: block; width: 26px; height: 2px; background-color: #8a5ea8; }
-
 /*footer*/
 footer { width: 100%; height: 398px; color: #fff; background-color: #300a4e; }
 footer .left { float: left; width: 545px; }
@@ -164,7 +152,6 @@ footer .copyright { padding-top: 22px; color: #c1b6ca; }
 footer .copyright a { color: #c1b6ca }
 footer .copyright a:hover { color: #ceb3e0; }
 footer .right1 { margin-top: 150px; }
-
 /*固定的悬浮窗*/
 .yb_conct { position: fixed; right: -128px; z-index: 999999; cursor: pointer; transition: all .3s ease; }
 .yb_bar ul li { width: 188px; height: 56px; margin-bottom: 1px; overflow: hidden; font: 16px/53px "Microsoft YaHei"; transition: all .5s ease; text-indent: 80px; color: #fff; border-radius: 3px; }
@@ -175,7 +162,6 @@ footer .right1 { margin-top: 150px; }
 .hd_qr { padding: 10px 29px 25px 30px; }
 .yb_QQ a { display: block; width: 100%; height: 100%; text-indent: 80px; color: #fff; }
 .yb_phone a { display: block; width: 100%; height: 100%; text-indent: 80px; color: #fff; }
-
 /* kst popup*/
 body .popup { border-radius: 10px; background-color: transparent; }
 body .popup .layui-layer-btn { padding-top: 12px; }
@@ -184,7 +170,6 @@ body .popup .layui-layer-content img { display: block; width: 100%; border-top-l
 body .popup .layui-layer-btn .layui-layer-btn0 { width: 120px; margin: 5px 15px 0; color: #999; border: 1px solid #cecece; background-color: #fff; }
 body .popup .layui-layer-btn .layui-layer-btn1 { width: 120px; margin: 5px 15px 0; color: #7d64c3; border: 1px solid #cbbeef; background-color: #fff; }
 body .popup .layui-layer-btn .layui-layer-btn2 { width: 120px; margin: 5px 15px 0; color: #fff; border: 1px solid #dedede;    /*background-color: rgba(169, 125, 203, .8);*/ background-color: #7d64c3; }
-
 /*抖动分期*/
 @-moz-keyframes tada2 {
     0% { -moz-transform: scale(1); }
@@ -201,7 +186,6 @@ body .popup .layui-layer-btn .layui-layer-btn2 { width: 120px; margin: 5px 15px 
     100% { -webkit-transform: scale(1) rotate(0); }
 }
 .fq { position: fixed; width: 200px; right: 20px; bottom: 20px; z-index: 999999; -webkit-animation: tada2 10s -9s ease both infinite; -moz-animation: tada2 10s -9s ease both infinite; }
-
 /* lazysizes */
 .lazyload, .lazyloading { opacity: 0; }
 .lazyloaded { opacity: 1; transition: opacity 500ms; }
