--- a/static.hzshuangmei.com/css/m/xbnset/bnsfet.css
+++ b/static.hzshuangmei.com/css/m/xbnset/bnsfet.css
@@ -199,7 +199,7 @@ body {
 .m2zx {
     width: 6.35rem;
     height: 2.275rem;
-    margin-top: 1.175rem;
+    margin-top: 1.075rem;
     text-align: center;
     border: solid 0.025rem #87523a;
     background-color: transparent;
@@ -280,7 +280,7 @@ body {
     line-height: 0.75rem;
     color: #ca785e;
 }
-.m3zx > img {
+.mbnsetcon .m3zx > img {
     width: 0.525rem;
     margin-left: 0.4rem;
 }
@@ -435,7 +435,7 @@ body {
     line-height: 0.975rem;
     color: #ffebc0;
 }
-.m4zx img {
+.mbnsetcon .m4zx img {
     width: 0.575rem;
     margin-left: 0.55rem;
 }
@@ -494,7 +494,7 @@ body {
 .m5ul :nth-child(3) {
     margin-right: 1.6rem;
 }
-.m5ul img:first-child {
+.mbnsetcon .m5ul img:first-child {
     width: 6.325rem;
     border-radius: 50%;
 }
@@ -538,8 +538,8 @@ body {
     margin: 1.8rem 0 1.375rem 0;
     background-color: #cd6a60;
 }
-.m5zx1 img:first-child,
-.m5zx2 img:first-child {
+.mbnsetcon .m5zx1 img:first-child,
+.mbnsetcon .m5zx2 img:first-child {
     width: 4.025rem;
     margin: 0.325rem auto 0.125rem;
 }
