--- a/static.hzshuangmei.com/css/m/xbnset/bnsfet.css
+++ b/static.hzshuangmei.com/css/m/xbnset/bnsfet.css
@@ -20,8 +20,8 @@ body {
 }
 .yinshen {
     position: absolute;
-    width: 0.025rem;
-    height: 0.025rem;
+    width: .025rem;
+    height: .025rem;
     padding: 0;
     margin: -0.025rem;
     overflow: hidden;
@@ -49,7 +49,7 @@ body {
 .m8 {
     position: relative;
     width: 16rem;
-    padding-top: 0.025rem;
+    padding-top: .025rem;
     margin: auto;
 }
 .m1 {
@@ -63,10 +63,10 @@ body {
 .m1p1 {
     width: 7.2rem;
     height: 1.05rem;
-    margin-top: 0.125rem;
+    margin-top: .125rem;
     margin-left: 1.325rem;
-    font-size: 0.45rem;
-    line-height: 0.6rem;
+    font-size: .45rem;
+    line-height: .6rem;
     color: #b5a69a;
 }
 .m1tit,
@@ -77,12 +77,12 @@ body {
 .m1img1 {
     position: absolute;
     top: 2.55rem;
-    left: 0.4rem;
+    left: .4rem;
     width: 15.6rem;
 }
 .pagetext p {
     position: absolute;
-    font-size: 0.425rem;
+    font-size: .425rem;
     color: #8b5139;
 }
 .p2 {
@@ -111,22 +111,22 @@ body {
     left: 10.3rem;
     width: 4.25rem;
     height: 3.7rem;
-    padding-top: 0.025rem;
+    padding-top: .025rem;
 }
 .m1a span {
     display: block;
     text-align: center;
 }
 .m1a .s1 {
-    margin-top: 0.85rem;
-    margin-bottom: 0.075rem;
-    font-size: 0.5rem;
-    line-height: 0.5rem;
+    margin-top: .85rem;
+    margin-bottom: .075rem;
+    font-size: .5rem;
+    line-height: .5rem;
     color: #b49a92;
 }
 .m1a .s2 {
-    font-size: 0.75rem;
-    line-height: 0.75rem;
+    font-size: .75rem;
+    line-height: .75rem;
     color: #ca785e;
 }
 .m2 {
@@ -144,7 +144,7 @@ body {
 }
 .m2img1 {
     margin-top: 1.35rem;
-    margin-bottom: 0.875rem;
+    margin-bottom: .875rem;
 }
 .m2 .page {
     position: relative;
@@ -156,8 +156,8 @@ body {
 }
 .ps1,
 .ps4 {
-    width: 0.175rem;
-    height: 0.55rem;
+    width: .175rem;
+    height: .55rem;
     background-color: #ae6031;
 }
 .ps1 {
@@ -167,15 +167,15 @@ body {
 .ps2 {
     top: 8.6rem;
     left: 3.425rem;
-    font-size: 0.6rem;
-    line-height: 0.6rem;
+    font-size: .6rem;
+    line-height: .6rem;
     color: #69473d;
 }
 .ps3 {
     top: 8.65rem;
     right: 1.975rem;
-    font-size: 0.475rem;
-    line-height: 0.475rem;
+    font-size: .475rem;
+    line-height: .475rem;
     color: rgba(255, 255, 255, 0.8);
 }
 .ps4 {
@@ -185,15 +185,15 @@ body {
 .ps5 {
     top: 19.7rem;
     left: 7.875rem;
-    font-size: 0.675rem;
-    line-height: 0.675rem;
+    font-size: .675rem;
+    line-height: .675rem;
     color: #69473d;
 }
 .ps6 {
     top: 19.875rem;
     left: 2.05rem;
-    font-size: 0.475rem;
-    line-height: 0.475rem;
+    font-size: .475rem;
+    line-height: .475rem;
     color: rgba(255, 255, 255, 0.8);
 }
 .m2zx {
@@ -201,88 +201,88 @@ body {
     height: 2.275rem;
     margin-top: 1.075rem;
     text-align: center;
-    border: solid 0.025rem #87523a;
+    border: solid .025rem #87523a;
     background-color: transparent;
 }
 .m2zx .a1 {
     width: 5.175rem;
-    height: 0.45rem;
-    padding-bottom: 0.125rem;
-    margin-top: 0.225rem;
-    margin-bottom: 0.2rem;
-    font-size: 0.45rem;
-    line-height: 0.45rem;
+    height: .45rem;
+    padding-bottom: .125rem;
+    margin-top: .225rem;
+    margin-bottom: .2rem;
+    font-size: .45rem;
+    line-height: .45rem;
     color: #f0c1a1;
-    border-bottom: 0.025rem solid #87523a;
+    border-bottom: .025rem solid #87523a;
 }
 .m2zx .a2 {
     display: inline-block;
-    height: 0.975rem;
-    font-size: 0.975rem;
-    line-height: 0.975rem;
+    height: .975rem;
+    font-size: .975rem;
+    line-height: .975rem;
     color: #ca785e;
 }
 .mbnsetcon a img {
-    width: 0.575rem;
-    margin-left: 0.55rem;
+    width: .575rem;
+    margin-left: .55rem;
 }
 .m3 {
     height: 26.15rem;
 }
 .m3tit {
     width: 5.85rem;
-    margin: 1.3rem 0 0.375rem 0.45rem;
+    margin: 1.3rem 0 .375rem .45rem;
 }
 .m3p1 {
     width: 15.5rem;
-    margin-left: 0.475rem;
-    font-size: 0.45rem;
-    line-height: 0.6rem;
+    margin-left: .475rem;
+    font-size: .45rem;
+    line-height: .6rem;
     color: #9c796e;
 }
 .m3img1 {
     width: 15.325rem;
-    margin-top: 0.85rem;
+    margin-top: .85rem;
     margin-bottom: 1.125rem;
 }
 .m3img2 {
     width: 16rem;
 }
 .m3p2 {
-    margin-bottom: 0.125rem;
-    font-size: 0.7rem;
-    line-height: 0.7rem;
+    margin-bottom: .125rem;
+    font-size: .7rem;
+    line-height: .7rem;
     text-align: center;
     color: #b5724d;
 }
 .m3zx {
     width: 5.45rem;
     height: 1.975rem;
-    margin-top: 0.6rem;
+    margin-top: .6rem;
     text-align: center;
     border: solid 0.025rem rgba(135, 82, 58, 0.7);
 }
 .m3zx div {
     width: 4.875rem;
     margin: auto;
-    border-bottom: 0.025rem solid #c58f75;
+    border-bottom: .025rem solid #c58f75;
 }
 .m3zx div img {
     width: 4.175rem;
-    margin-top: 0.375rem;
-    margin-bottom: 0.15rem;
+    margin-top: .375rem;
+    margin-bottom: .15rem;
 }
 .m3zx .a2 {
     display: inline-block;
-    height: 0.75rem;
-    margin-top: 0.075rem;
-    font-size: 0.75rem;
-    line-height: 0.75rem;
+    height: .75rem;
+    margin-top: .075rem;
+    font-size: .75rem;
+    line-height: .75rem;
     color: #ca785e;
 }
 .mbnsetcon .m3zx > img {
-    width: 0.525rem;
-    margin-left: 0.4rem;
+    width: .525rem;
+    margin-left: .4rem;
 }
 .m3a {
     position: absolute;
@@ -298,15 +298,15 @@ body {
 .m3s1 {
     top: 7.4rem;
     left: 7.6rem;
-    font-size: 0.45rem;
-    line-height: 0.45rem;
+    font-size: .45rem;
+    line-height: .45rem;
     color: #a18477;
 }
 .m3s2 {
     top: 10.65rem;
     left: 8.475rem;
-    font-size: 0.4rem;
-    line-height: 0.4rem;
+    font-size: .4rem;
+    line-height: .4rem;
     color: #8c4224;
 }
 .m4 {
@@ -322,7 +322,7 @@ body {
 .m4td {
     width: 15.65rem;
     height: 14.425rem;
-    padding-top: 0.325rem;
+    padding-top: .325rem;
     margin: auto;
     background-color: rgba(251, 244, 236, 0.2);
 }
@@ -344,9 +344,9 @@ body {
 }
 .m4td li span {
     display: block;
-    margin-bottom: 0.3rem;
-    font-size: 0.7rem;
-    line-height: 0.7rem;
+    margin-bottom: .3rem;
+    font-size: .7rem;
+    line-height: .7rem;
 }
 .m4td li div {
     position: absolute;
@@ -356,8 +356,8 @@ body {
     margin-top: -1rem;
 }
 .m4td li p {
-    font-size: 0.45rem;
-    line-height: 0.55rem;
+    font-size: .45rem;
+    line-height: .55rem;
     color: #783d17;
 }
 .m4td li img {
@@ -367,32 +367,32 @@ body {
 .m4img1 {
     height: 1.65rem;
     margin-top: -0.825rem;
-    margin-left: 0.425rem;
+    margin-left: .425rem;
 }
 .m4img2 {
     height: 2.15rem;
     margin-top: -1.075rem;
-    margin-left: 0.475rem;
+    margin-left: .475rem;
 }
 .m4img3 {
     height: 1.55rem;
     margin-top: -0.775rem;
-    margin-left: 0.45rem;
+    margin-left: .45rem;
 }
 .m4img4 {
     height: 1.35rem;
     margin-top: -0.675rem;
-    margin-left: 0.9rem;
+    margin-left: .9rem;
 }
 .m4img5 {
     height: 1.25rem;
     margin-top: -0.625rem;
-    margin-left: 0.55rem;
+    margin-left: .55rem;
 }
 .m4img6 {
     height: 1.55rem;
     margin-top: -0.775rem;
-    margin-left: 0.7rem;
+    margin-left: .7rem;
 }
 .m4l1 span,
 .m4l4 span,
@@ -421,23 +421,23 @@ body {
 }
 .m4zx p {
     width: 5.175rem;
-    padding: 0.25rem 0 0.15rem 0;
-    margin: 0 auto 0.2rem;
-    font-size: 0.45rem;
-    line-height: 0.45rem;
+    padding: .25rem 0 .15rem 0;
+    margin: 0 auto .2rem;
+    font-size: .45rem;
+    line-height: .45rem;
     color: #f6c9ab;
-    border-bottom: 0.025rem solid #f7caab;
+    border-bottom: .025rem solid #f7caab;
 }
 .m4zx .a2 {
     display: inline-block;
-    height: 0.975rem;
-    font-size: 0.975rem;
-    line-height: 0.975rem;
+    height: .975rem;
+    font-size: .975rem;
+    line-height: .975rem;
     color: #ffebc0;
 }
 .mbnsetcon .m4zx img {
-    width: 0.575rem;
-    margin-left: 0.55rem;
+    width: .575rem;
+    margin-left: .55rem;
 }
 .m4a {
     position: absolute;
@@ -457,19 +457,19 @@ body {
     left: 0;
     width: 16rem;
     height: 24.55rem;
-    padding-top: 0.025rem;
+    padding-top: .025rem;
     background-color: transparent;
 }
 .m5tit1 {
     width: 3.45rem;
     margin-top: 2.35rem;
-    margin-left: 0.675rem;
+    margin-left: .675rem;
     vertical-align: top;
 }
 .m5tit2 {
     width: 10.125rem;
     margin-top: 1.675rem;
-    margin-left: 0.275rem;
+    margin-left: .275rem;
     vertical-align: top;
 }
 .m5p1 {
@@ -477,8 +477,8 @@ body {
     top: 2.8rem;
     left: 4.45rem;
     width: 10.6rem;
-    font-size: 0.45rem;
-    line-height: 0.55rem;
+    font-size: .45rem;
+    line-height: .55rem;
     color: #9c796e;
 }
 .m5ul {
@@ -500,25 +500,25 @@ body {
 }
 .m5ul span {
     display: block;
-    margin: 0.1rem 0 0.2rem 0;
-    font-size: 0.6rem;
-    line-height: 0.6rem;
+    margin: .1rem 0 .2rem 0;
+    font-size: .6rem;
+    line-height: .6rem;
     color: #66503a;
 }
 .m5ul p {
     width: 100%;
-    font-size: 0.45rem;
-    line-height: 0.45rem;
+    font-size: .45rem;
+    line-height: .45rem;
     color: #b58160;
 }
 .m5l2 p,
 .m5l2 span,
 .m5l4 p,
 .m5l4 span {
-    margin-left: 0.45rem;
+    margin-left: .45rem;
 }
 .m5l3 p {
-    font-size: 0.4rem;
+    font-size: .4rem;
 }
 .m5zx1,
 .m5zx2 {
@@ -529,7 +529,7 @@ body {
 .m5zx1 {
     width: 5.575rem;
     height: 1.75rem;
-    margin: 1.8rem 0.325rem 1.375rem 2.55rem;
+    margin: 1.8rem .325rem 1.375rem 2.55rem;
     border: solid 0.025rem rgba(135, 82, 58, 0.7);
 }
 .m5zx2 {
@@ -541,13 +541,13 @@ body {
 .mbnsetcon .m5zx1 img:first-child,
 .mbnsetcon .m5zx2 img:first-child {
     width: 4.025rem;
-    margin: 0.325rem auto 0.125rem;
+    margin: .325rem auto .125rem;
 }
 .m5zx1 p,
 .m5zx2 p {
     width: 3.975rem;
-    height: 0.025rem;
-    margin: 0 auto 0.125rem;
+    height: .025rem;
+    margin: 0 auto .125rem;
     background-color: #c0b3ad;
 }
 .m5zx2 p {
@@ -555,8 +555,8 @@ body {
 }
 .m5zx1 span,
 .m5zx2 span {
-    font-size: 0.75rem;
-    line-height: 0.75rem;
+    font-size: .75rem;
+    line-height: .75rem;
     color: #ca785e;
 }
 .m5zx2 span {
@@ -564,8 +564,8 @@ body {
 }
 .m5zx1 img:last-child,
 .m5zx2 img:last-child {
-    width: 0.45rem;
-    margin-left: 0.4rem;
+    width: .45rem;
+    margin-left: .4rem;
 }
 .m5a1,
 .m5a2 {
@@ -585,36 +585,36 @@ body {
 }
 .m6tit {
     width: 8.025rem;
-    margin-top: 0.6rem;
-    margin-left: 0.7rem;
+    margin-top: .6rem;
+    margin-left: .7rem;
 }
 .m6d img {
-    width: 0.925rem;
+    width: .925rem;
     vertical-align: middle;
 }
 .m6d :nth-child(2) {
     display: inline-block;
-    margin-left: 0.25rem;
-    font-size: 0.7rem;
-    line-height: 0.7rem;
+    margin-left: .25rem;
+    font-size: .7rem;
+    line-height: .7rem;
     vertical-align: middle;
     color: #af9283;
 }
 .m6d :nth-child(3) {
     display: inline-block;
-    font-size: 0.85rem;
-    line-height: 0.85rem;
+    font-size: .85rem;
+    line-height: .85rem;
     vertical-align: middle;
     color: #af9283;
 }
 .m6d p {
-    font-size: 0.45rem;
-    line-height: 0.575rem;
+    font-size: .45rem;
+    line-height: .575rem;
     color: #c5774b;
 }
 .m6d {
     position: absolute;
-    left: 0.3rem;
+    left: .3rem;
 }
 .m6d1 {
     top: 5.775rem;
@@ -634,20 +634,20 @@ body {
 }
 .m6zx img:first-child {
     width: 4.025rem;
-    margin: 0.375rem auto 0.15rem;
+    margin: .375rem auto .15rem;
 }
 .m6zx img:last-child {
-    width: 0.45rem;
+    width: .45rem;
 }
 .m6zx p {
     width: 4.875rem;
-    height: 0.025rem;
-    margin: 0 auto 0.075rem;
+    height: .025rem;
+    margin: 0 auto .075rem;
     background-color: #c58f75;
 }
 .m6zx span {
-    font-size: 0.75rem;
-    line-height: 0.75rem;
+    font-size: .75rem;
+    line-height: .75rem;
     color: #ca785e;
 }
 .m6a {
@@ -660,6 +660,7 @@ body {
 .m7 {
     height: 41.35rem;
     background: url("//img.hzshuangmei.com/m/xbnset/images/m7bg.jpg") center no-repeat;
+    background-size: 16rem 41.35rem;
 }
 .m7tit {
     width: 10.225rem;
@@ -671,15 +672,15 @@ body {
     position: relative;
     width: 14.775rem;
     height: 9.575rem;
-    margin: 0 auto 0.325rem;
+    margin: 0 auto .325rem;
 }
 .m7al span {
     position: absolute;
-    bottom: 0.45rem;
+    bottom: .45rem;
     z-index: 2;
     width: 1.4rem;
     height: 1.4rem;
-    font-size: 0.5rem;
+    font-size: .5rem;
     line-height: 1.4rem;
     text-align: center;
     color: #6a5034;
@@ -698,9 +699,9 @@ body {
     left: 0;
     z-index: 1;
     width: 7.4rem;
-    height: 0.9rem;
-    font-size: 0.45rem;
-    line-height: 0.9rem;
+    height: .9rem;
+    font-size: .45rem;
+    line-height: .9rem;
     text-align: center;
     color: #875b2b;
     background-color: rgba(255, 255, 255, 0.4);
@@ -709,29 +710,29 @@ body {
     display: inline-block;
     width: 6.475rem;
     height: 2.025rem;
-    margin: 1.25rem 0.35rem 0 1.425rem;
+    margin: 1.25rem .35rem 0 1.425rem;
     text-align: center;
     vertical-align: top;
     border: solid 0.025rem rgba(249, 225, 215, 0.3);
 }
 .m7zx1 img:first-child {
     width: 4.65rem;
-    margin: 0.35rem 0 0.15rem;
+    margin: .35rem 0 .15rem;
 }
 .m7zx1 p {
     width: 4.575rem;
-    height: 0.025rem;
-    margin: 0 auto 0.15rem;
+    height: .025rem;
+    margin: 0 auto .15rem;
     background-color: #c0b3ad;
 }
 .m7zx1 span {
-    font-size: 0.85rem;
-    line-height: 0.85rem;
+    font-size: .85rem;
+    line-height: .85rem;
     color: #cbc0b9;
 }
 .m7zx1 img:last-child {
-    width: 0.55rem;
-    margin-left: 0.45rem;
+    width: .55rem;
+    margin-left: .45rem;
 }
 .m7zx2 {
     display: inline-block;
@@ -744,22 +745,22 @@ body {
 }
 .m7zx2 img:first-child {
     width: 4.675rem;
-    margin: 0.35rem 0 0.15rem;
+    margin: .35rem 0 .15rem;
 }
 .m7zx2 p {
     width: 4.575rem;
-    height: 0.025rem;
-    margin: 0 auto 0.15rem;
+    height: .025rem;
+    margin: 0 auto .15rem;
     background-color: rgba(255, 252, 251, 0.5);
 }
 .m7zx2 span {
-    font-size: 0.85rem;
-    line-height: 0.85rem;
+    font-size: .85rem;
+    line-height: .85rem;
     color: rgba(255, 255, 255, 0.7);
 }
 .m7zx2 img:last-child {
-    width: 0.525rem;
-    margin-left: 0.45rem;
+    width: .525rem;
+    margin-left: .45rem;
 }
 .m7al3 span:last-child {
     background-color: rgba(255, 255, 255, 0.6);
@@ -776,7 +777,7 @@ body {
 }
 .m8tit {
     width: 12.675rem;
-    margin: 1.9rem 0 1.4rem 0.375rem;
+    margin: 1.9rem 0 1.4rem .375rem;
 }
 .m8img1 {
     width: 16rem;
@@ -787,11 +788,11 @@ body {
     vertical-align: top;
 }
 .m8js h4 {
-    margin-top: 0.725rem;
-    margin-left: 0.525rem;
-    font-size: 0.65rem;
+    margin-top: .725rem;
+    margin-left: .525rem;
+    font-size: .65rem;
     font-weight: normal;
-    line-height: 0.65rem;
+    line-height: .65rem;
     color: #b27f57;
 }
 .m8js1 {
@@ -807,20 +808,20 @@ body {
     background-color: #ffedea;
 }
 .m8js p {
-    width: 0.625rem;
-    height: 0.075rem;
-    margin: 0.2rem 0 0.7rem 0.525rem;
+    width: .625rem;
+    height: .075rem;
+    margin: .2rem 0 .7rem .525rem;
     background-color: #f27000;
 }
 .m8js ul {
-    margin-left: 0.55rem;
-    font-size: 0.45rem;
-    line-height: 0.55rem;
+    margin-left: .55rem;
+    font-size: .45rem;
+    line-height: .55rem;
     color: #b27f57;
 }
 .m8js ul li {
     width: 4.5rem;
-    margin-bottom: 0.35rem;
+    margin-bottom: .35rem;
 }
 .m8zx {
     width: 5.575rem;
@@ -831,23 +832,23 @@ body {
 }
 .m8zx img:first-child {
     width: 4.025rem;
-    margin-top: 0.375rem;
-    margin-bottom: 0.15rem;
+    margin-top: .375rem;
+    margin-bottom: .15rem;
 }
 .m8zx p {
     width: 4.875rem;
-    height: 0.025rem;
-    margin: 0 auto 0.075rem;
+    height: .025rem;
+    margin: 0 auto .075rem;
     background-color: rgba(197, 143, 117, 0.5);
 }
 .m8zx span {
-    font-size: 0.75rem;
-    line-height: 0.75rem;
+    font-size: .75rem;
+    line-height: .75rem;
     color: #ca785e;
 }
 .m8zx img:last-child {
-    width: 0.45rem;
-    margin-left: 0.4rem;
+    width: .45rem;
+    margin-left: .4rem;
 }
 .m8a {
     position: absolute;
