玻尿酸额头css修改
玻尿酸额头css修改

--- a/static.hzshuangmei.com/css/m/xbnset/bnsfet.css
+++ b/static.hzshuangmei.com/css/m/xbnset/bnsfet.css
@@ -35,9 +35,11 @@ body {
     width: 16rem;
     margin: auto;
     font-size: 0;
+    overflow-x: hidden;
 }
-.banner img {
+.mbnsetcon.banner img {
     width: 100%;
+    margin-left: 0;
 }
 .m1,
 .m2,
