--- a/static.hzshuangmei.com/css/m/xbnset/bnsfet.css
+++ b/static.hzshuangmei.com/css/m/xbnset/bnsfet.css
@@ -35,9 +35,8 @@ body {
     width: 16rem;
     margin: auto;
     font-size: 0;
-    overflow-x: hidden;
 }
-.mbnsetcon.banner img {
+.mbnsetcon .banner img {
     width: 100%;
     margin-left: 0;
 }
@@ -201,7 +200,7 @@ body {
 .m2zx {
     width: 6.35rem;
     height: 2.275rem;
-    margin-top: 1.075rem;
+    margin-top: 1.175rem;
     text-align: center;
     border: solid .025rem #87523a;
     background-color: transparent;
@@ -282,7 +281,7 @@ body {
     line-height: .75rem;
     color: #ca785e;
 }
-.mbnsetcon .m3zx > img {
+.m3zx > img {
     width: .525rem;
     margin-left: .4rem;
 }
@@ -437,7 +436,7 @@ body {
     line-height: .975rem;
     color: #ffebc0;
 }
-.mbnsetcon .m4zx img {
+.m4zx img {
     width: .575rem;
     margin-left: .55rem;
 }
@@ -496,7 +495,7 @@ body {
 .m5ul :nth-child(3) {
     margin-right: 1.6rem;
 }
-.mbnsetcon .m5ul img:first-child {
+.m5ul img:first-child {
     width: 6.325rem;
     border-radius: 50%;
 }
@@ -540,8 +539,8 @@ body {
     margin: 1.8rem 0 1.375rem 0;
     background-color: #cd6a60;
 }
-.mbnsetcon .m5zx1 img:first-child,
-.mbnsetcon .m5zx2 img:first-child {
+.m5zx1 img:first-child,
+.m5zx2 img:first-child {
     width: 4.025rem;
     margin: .325rem auto .125rem;
 }
