--- a/static.hzshuangmei.com/css/m/xbnset/bnsfet.css
+++ b/static.hzshuangmei.com/css/m/xbnset/bnsfet.css
@@ -1,14 +1,12 @@
 * {
     padding: 0;
     margin: 0;
-
     font-family: "微软雅黑";
     font-weight: normal;
     list-style: none;
 }
 a {
     text-decoration: none;
-
     color: white;
 }
 a:hover {
@@ -22,11 +20,10 @@ body {
 }
 .yinshen {
     position: absolute;
-
     width: .025rem;
     height: .025rem;
     padding: 0;
-    margin: -.025rem;
+    margin: -0.025rem;
     overflow: hidden;
     clip: rect(0, 0, 0, 0);
 }
@@ -38,7 +35,6 @@ body {
     width: 16rem;
     margin: auto;
     overflow-x: hidden;
-
     font-size: 0;
 }
 .mbnsetcon .banner img {
@@ -54,7 +50,6 @@ body {
 .m7,
 .m8 {
     position: relative;
-
     width: 16rem;
     padding-top: .025rem;
     margin: auto;
@@ -72,10 +67,8 @@ body {
     height: 1.05rem;
     margin-top: .125rem;
     margin-left: 1.325rem;
-
     font-size: .45rem;
     line-height: .6rem;
-
     color: #b5a69a;
 }
 .m1tit,
@@ -87,14 +80,11 @@ body {
     position: absolute;
     top: 2.55rem;
     left: .4rem;
-
     width: 15.6rem;
 }
 .pagetext p {
     position: absolute;
-
     font-size: .425rem;
-
     color: #8b5139;
 }
 .p2 {
@@ -121,34 +111,28 @@ body {
     position: absolute;
     top: 12.2rem;
     left: 10.3rem;
-
     width: 4.25rem;
     height: 3.7rem;
     padding-top: .025rem;
 }
 .m1a span {
     display: block;
-
     text-align: center;
 }
 .m1a .s1 {
     margin-top: .85rem;
     margin-bottom: .075rem;
-
     font-size: .5rem;
     line-height: .5rem;
-
     color: #b49a92;
 }
 .m1a .s2 {
     font-size: .75rem;
     line-height: .75rem;
-
     color: #ca785e;
 }
 .m2 {
     height: 30.175rem;
-
     background: url("//img.hzshuangmei.com/m/xbnset/images/m2bg.jpg") center no-repeat;
     background-size: 16rem 30.175rem;
 }
@@ -166,7 +150,6 @@ body {
 }
 .m2 .page {
     position: relative;
-
     width: 14.975rem;
     margin: auto;
 }
@@ -177,7 +160,6 @@ body {
 .ps4 {
     width: .175rem;
     height: .55rem;
-
     background-color: #ae6031;
 }
 .ps1 {
@@ -187,20 +169,16 @@ body {
 .ps2 {
     top: 8.6rem;
     left: 3.425rem;
-
     font-size: .6rem;
     line-height: .6rem;
-
     color: #69473d;
 }
 .ps3 {
     top: 8.65rem;
     right: 1.975rem;
-
     font-size: .475rem;
     line-height: .475rem;
-
-    color: rgba(255, 255, 255, .8);
+    color: rgba(255, 255, 255, 0.8);
 }
 .ps4 {
     top: 19.775rem;
@@ -209,28 +187,22 @@ body {
 .ps5 {
     top: 19.7rem;
     left: 7.875rem;
-
     font-size: .675rem;
     line-height: .675rem;
-
     color: #69473d;
 }
 .ps6 {
     top: 19.875rem;
     left: 2.05rem;
-
     font-size: .475rem;
     line-height: .475rem;
-
-    color: rgba(255, 255, 255, .8);
+    color: rgba(255, 255, 255, 0.8);
 }
 .m2zx {
     width: 6.35rem;
     height: 2.275rem;
     margin-top: 1.075rem;
-
     text-align: center;
-
     border: solid .025rem #87523a;
     background-color: transparent;
 }
@@ -240,20 +212,16 @@ body {
     padding-bottom: .125rem;
     margin-top: .225rem;
     margin-bottom: .2rem;
-
     font-size: .45rem;
     line-height: .45rem;
-
     color: #f0c1a1;
     border-bottom: .025rem solid #87523a;
 }
 .m2zx .a2 {
     display: inline-block;
     height: .975rem;
-
     font-size: .975rem;
     line-height: .975rem;
-
     color: #ca785e;
 }
 .mbnsetcon a img {
@@ -270,10 +238,8 @@ body {
 .m3p1 {
     width: 15.5rem;
     margin-left: .475rem;
-
     font-size: .45rem;
     line-height: .6rem;
-
     color: #9c796e;
 }
 .m3img1 {
@@ -286,27 +252,21 @@ body {
 }
 .m3p2 {
     margin-bottom: .125rem;
-
     font-size: .7rem;
     line-height: .7rem;
-
     text-align: center;
-
     color: #b5724d;
 }
 .m3zx {
     width: 5.45rem;
     height: 1.975rem;
     margin-top: .6rem;
-
     text-align: center;
-
-    border: solid .025rem rgba(135, 82, 58, .7);
+    border: solid 0.025rem rgba(135, 82, 58, 0.7);
 }
 .m3zx div {
     width: 4.875rem;
-    margin: auto;
-
+    margin: 0 auto .175rem;
     border-bottom: .025rem solid #c58f75;
 }
 .m3zx div img {
@@ -317,11 +277,9 @@ body {
 .m3zx .a2 {
     display: inline-block;
     height: .75rem;
-    margin-top: .075rem;
-
+    /*margin-top: .075rem;*/
     font-size: .75rem;
     line-height: .75rem;
-
     color: #ca785e;
 }
 .m3zx > img {
@@ -332,7 +290,6 @@ body {
     position: absolute;
     top: 23rem;
     left: 5.25rem;
-
     width: 5.5rem;
     height: 2.025rem;
 }
@@ -343,24 +300,19 @@ body {
 .m3s1 {
     top: 7.4rem;
     left: 7.6rem;
-
     font-size: .45rem;
     line-height: .45rem;
-
     color: #a18477;
 }
 .m3s2 {
     top: 10.65rem;
     left: 8.475rem;
-
     font-size: .4rem;
     line-height: .4rem;
-
     color: #8c4224;
 }
 .m4 {
     height: 25.625rem;
-
     background: url("//img.hzshuangmei.com/m/xbnset/images/m4bg.jpg") center no-repeat;
     background-size: 16rem 25.625rem;
 }
@@ -374,33 +326,27 @@ body {
     height: 14.425rem;
     padding-top: .325rem;
     margin: auto;
-
-    background-color: rgba(251, 244, 236, .2);
+    background-color: rgba(251, 244, 236, 0.2);
 }
 .m4td ul {
     width: 15.15rem;
     height: 14.05rem;
     margin: auto;
-
-    border-bottom: .025rem solid rgba(255, 255, 255, .33);
-    border-left: .025rem solid rgba(255, 255, 255, .33);
+    border-bottom: 0.025rem solid rgba(255, 255, 255, 0.33);
+    border-left: 0.025rem solid rgba(255, 255, 255, 0.33);
 }
 .m4td li {
     position: relative;
-
     display: inline-block;
     width: 7.5rem;
     height: 4.675rem;
-
     vertical-align: top;
-
-    border-top: .025rem solid rgba(255, 255, 255, .33);
-    border-right: .025rem solid rgba(255, 255, 255, .33);
+    border-top: 0.025rem solid rgba(255, 255, 255, 0.33);
+    border-right: 0.025rem solid rgba(255, 255, 255, 0.33);
 }
 .m4td li span {
     display: block;
     margin-bottom: .3rem;
-
     font-size: .7rem;
     line-height: .7rem;
 }
@@ -408,14 +354,12 @@ body {
     position: absolute;
     top: 50%;
     left: 2.875rem;
-
     height: 2rem;
     margin-top: -1rem;
 }
 .m4td li p {
     font-size: .45rem;
     line-height: .55rem;
-
     color: #783d17;
 }
 .m4td li img {
@@ -424,7 +368,7 @@ body {
 }
 .m4img1 {
     height: 1.65rem;
-    margin-top: -.825rem;
+    margin-top: -0.825rem;
     margin-left: .425rem;
 }
 .m4img2 {
@@ -434,22 +378,22 @@ body {
 }
 .m4img3 {
     height: 1.55rem;
-    margin-top: -.775rem;
+    margin-top: -0.775rem;
     margin-left: .45rem;
 }
 .m4img4 {
     height: 1.35rem;
-    margin-top: -.675rem;
+    margin-top: -0.675rem;
     margin-left: .9rem;
 }
 .m4img5 {
     height: 1.25rem;
-    margin-top: -.625rem;
+    margin-top: -0.625rem;
     margin-left: .55rem;
 }
 .m4img6 {
     height: 1.55rem;
-    margin-top: -.775rem;
+    margin-top: -0.775rem;
     margin-left: .7rem;
 }
 .m4l1 span,
@@ -473,30 +417,24 @@ body {
     width: 6.1rem;
     height: 2.25rem;
     margin-top: 1.1rem;
-
     text-align: center;
-
-    border: solid .025rem rgba(232, 174, 135, .8);
+    border: solid 0.025rem rgba(232, 174, 135, 0.8);
     background-color: transparent;
 }
 .m4zx p {
     width: 5.175rem;
     padding: .25rem 0 .15rem 0;
     margin: 0 auto .2rem;
-
     font-size: .45rem;
     line-height: .45rem;
-
     color: #f6c9ab;
     border-bottom: .025rem solid #f7caab;
 }
 .m4zx .a2 {
     display: inline-block;
     height: .975rem;
-
     font-size: .975rem;
     line-height: .975rem;
-
     color: #ffebc0;
 }
 .m4zx img {
@@ -507,14 +445,12 @@ body {
     position: absolute;
     top: 21.825rem;
     left: 4.925rem;
-
     width: 6.15rem;
     height: 2.3rem;
 }
 .m5left {
     width: 8.425rem;
     height: 24.575rem;
-
     background-color: #fbf4ec;
 }
 .m5 {
@@ -524,37 +460,30 @@ body {
     position: absolute;
     top: 0;
     left: 0;
-
     width: 16rem;
     height: 24.55rem;
     padding-top: .025rem;
-
     background-color: transparent;
 }
 .m5tit1 {
     width: 3.45rem;
     margin-top: 2.35rem;
     margin-left: .675rem;
-
     vertical-align: top;
 }
 .m5tit2 {
     width: 10.125rem;
     margin-top: 1.675rem;
     margin-left: .275rem;
-
     vertical-align: top;
 }
 .m5p1 {
     position: absolute;
     top: 2.8rem;
     left: 4.45rem;
-
     width: 10.6rem;
-
     font-size: .45rem;
     line-height: .55rem;
-
     color: #9c796e;
 }
 .m5ul {
@@ -572,24 +501,19 @@ body {
 }
 .m5ul img:first-child {
     width: 6.325rem;
-
     border-radius: 50%;
 }
 .m5ul span {
     display: block;
     margin: .1rem 0 .2rem 0;
-
     font-size: .6rem;
     line-height: .6rem;
-
     color: #66503a;
 }
 .m5ul p {
     width: 100%;
-
     font-size: .45rem;
     line-height: .45rem;
-
     color: #b58160;
 }
 .m5l2 p,
@@ -604,7 +528,6 @@ body {
 .m5zx1,
 .m5zx2 {
     display: inline-block;
-
     text-align: center;
     vertical-align: top;
 }
@@ -612,14 +535,12 @@ body {
     width: 5.575rem;
     height: 1.75rem;
     margin: 1.8rem .325rem 1.375rem 2.55rem;
-
-    border: solid .025rem rgba(135, 82, 58, .7);
+    border: solid 0.025rem rgba(135, 82, 58, 0.7);
 }
 .m5zx2 {
     width: 5.625rem;
     height: 1.8rem;
     margin: 1.8rem 0 1.375rem 0;
-
     background-color: #cd6a60;
 }
 .m5zx1 img:first-child,
@@ -632,21 +553,22 @@ body {
     width: 3.975rem;
     height: .025rem;
     margin: 0 auto .125rem;
-
-    background-color: #c0b3ad;
+    border-bottom: 0.025rem solid #c0b3ad;
+    background: transparent;
+    /*background-color: #c0b3ad;*/
 }
 .m5zx2 p {
-    background-color: rgba(255, 252, 251, .5);
+    border-bottom: 0.025rem solid rgba(255, 252, 251, 0.5);
+    /*background-color: rgba(255, 252, 251, .5);*/
 }
 .m5zx1 span,
 .m5zx2 span {
     font-size: .75rem;
     line-height: .75rem;
-
     color: #ca785e;
 }
 .m5zx2 span {
-    color: rgba(255, 255, 255, .7);
+    color: rgba(255, 255, 255, 0.7);
 }
 .m5zx1 img:last-child,
 .m5zx2 img:last-child {
@@ -658,7 +580,6 @@ body {
     position: absolute;
     top: 25.525rem;
     left: 2.55rem;
-
     width: 5.625rem;
     height: 1.8rem;
 }
@@ -667,7 +588,6 @@ body {
 }
 .m6 {
     height: 19.175rem;
-
     background: url("//img.hzshuangmei.com/m/xbnset/images/m6bg.jpg") no-repeat center top;
     background-size: 16rem 15.475rem;
 }
@@ -678,34 +598,26 @@ body {
 }
 .m6d img {
     width: .925rem;
-
     vertical-align: middle;
 }
 .m6d :nth-child(2) {
     display: inline-block;
     margin-left: .25rem;
-
     font-size: .7rem;
     line-height: .7rem;
-
     vertical-align: middle;
-
     color: #af9283;
 }
 .m6d :nth-child(3) {
     display: inline-block;
-
     font-size: .85rem;
     line-height: .85rem;
-
     vertical-align: middle;
-
     color: #af9283;
 }
 .m6d p {
     font-size: .45rem;
     line-height: .575rem;
-
     color: #c5774b;
 }
 .m6d {
@@ -725,10 +637,8 @@ body {
     width: 5.575rem;
     height: 1.75rem;
     margin-top: 12.425rem;
-
     text-align: center;
-
-    border: solid .025rem rgba(135, 82, 58, .7);
+    border: solid 0.025rem rgba(135, 82, 58, 0.7);
 }
 .m6zx img:first-child {
     width: 4.025rem;
@@ -741,26 +651,24 @@ body {
     width: 4.875rem;
     height: .025rem;
     margin: 0 auto .075rem;
-
-    background-color: #c58f75;
+    border-bottom: 0.025rem solid #c58f75;
+    background-color: transparent;
+    /*background-color: #c58f75;*/
 }
 .m6zx span {
     font-size: .75rem;
     line-height: .75rem;
-
     color: #ca785e;
 }
 .m6a {
     position: absolute;
     top: 16.45rem;
     left: 5.175rem;
-
     width: 5.625rem;
     height: 1.8rem;
 }
 .m7 {
     height: 41.35rem;
-
     background: url("//img.hzshuangmei.com/m/xbnset/images/m7bg.jpg") center no-repeat;
     background-size: 16rem 41.35rem;
 }
@@ -772,7 +680,6 @@ body {
 .m7al img,
 .m7al {
     position: relative;
-
     width: 14.775rem;
     height: 9.575rem;
     margin: 0 auto .325rem;
@@ -781,18 +688,14 @@ body {
     position: absolute;
     bottom: .45rem;
     z-index: 2;
-
     width: 1.4rem;
     height: 1.4rem;
-
     font-size: .5rem;
     line-height: 1.4rem;
-
     text-align: center;
-
     color: #6a5034;
     border-radius: 50%;
-    background-color: rgba(236, 232, 229, .5);
+    background-color: rgba(236, 232, 229, 0.5);
 }
 .m7al span:first-child {
     left: 5.8rem;
@@ -805,28 +708,22 @@ body {
     bottom: 0;
     left: 0;
     z-index: 1;
-
     width: 7.4rem;
     height: .9rem;
-
     font-size: .45rem;
     line-height: .9rem;
-
     text-align: center;
-
     color: #875b2b;
-    background-color: rgba(255, 255, 255, .4);
+    background-color: rgba(255, 255, 255, 0.4);
 }
 .m7zx1 {
     display: inline-block;
     width: 6.475rem;
     height: 2.025rem;
     margin: 1.25rem .35rem 0 1.425rem;
-
     text-align: center;
     vertical-align: top;
-
-    border: solid .025rem rgba(249, 225, 215, .3);
+    border: solid 0.025rem rgba(249, 225, 215, 0.3);
 }
 .m7zx1 img:first-child {
     width: 4.65rem;
@@ -836,13 +733,11 @@ body {
     width: 4.575rem;
     height: .025rem;
     margin: 0 auto .15rem;
-
     background-color: #c0b3ad;
 }
 .m7zx1 span {
     font-size: .85rem;
     line-height: .85rem;
-
     color: #cbc0b9;
 }
 .m7zx1 img:last-child {
@@ -854,11 +749,9 @@ body {
     width: 6.475rem;
     height: 2.025rem;
     margin-top: 1.25rem;
-
     text-align: center;
     vertical-align: top;
-
-    border: solid .025rem rgba(249, 225, 215, .4);
+    border: solid 0.025rem rgba(249, 225, 215, 0.4);
 }
 .m7zx2 img:first-child {
     width: 4.675rem;
@@ -868,27 +761,24 @@ body {
     width: 4.575rem;
     height: .025rem;
     margin: 0 auto .15rem;
-
-    background-color: rgba(255, 252, 251, .5);
+    background-color: rgba(255, 252, 251, 0.5);
 }
 .m7zx2 span {
     font-size: .85rem;
     line-height: .85rem;
-
-    color: rgba(255, 255, 255, .7);
+    color: rgba(255, 255, 255, 0.7);
 }
 .m7zx2 img:last-child {
     width: .525rem;
     margin-left: .45rem;
 }
 .m7al3 span:last-child {
-    background-color: rgba(255, 255, 255, .6);
+    background-color: rgba(255, 255, 255, 0.6);
 }
 .m7a {
     position: absolute;
     bottom: 1.575rem;
     left: 1.425rem;
-
     width: 6.525rem;
     height: 2.075rem;
 }
@@ -905,47 +795,38 @@ body {
 .m8js {
     display: inline-block;
     height: 8.4rem;
-
     vertical-align: top;
 }
 .m8js h4 {
     margin-top: .725rem;
     margin-left: .525rem;
-
     font-size: .65rem;
     font-weight: normal;
     line-height: .65rem;
-
     color: #b27f57;
 }
 .m8js1 {
     width: 5.3rem;
-
     background-color: #ffedea;
 }
 .m8js2 {
     width: 5.45rem;
-
     background-color: #f7dacd;
 }
 .m8js3 {
     width: 5.25rem;
-
     background-color: #ffedea;
 }
 .m8js p {
     width: .625rem;
     height: .075rem;
     margin: .2rem 0 .7rem .525rem;
-
     background-color: #f27000;
 }
 .m8js ul {
     margin-left: .55rem;
-
     font-size: .45rem;
     line-height: .55rem;
-
     color: #b27f57;
 }
 .m8js ul li {
@@ -956,10 +837,8 @@ body {
     width: 5.575rem;
     height: 1.75rem;
     margin: 1.2rem auto 1.55rem;
-
     text-align: center;
-
-    border: solid .025rem rgba(135, 82, 58, .7);
+    border: solid 0.025rem rgba(135, 82, 58, 0.7);
 }
 .m8zx img:first-child {
     width: 4.025rem;
@@ -970,13 +849,11 @@ body {
     width: 4.875rem;
     height: .025rem;
     margin: 0 auto .075rem;
-
-    background-color: rgba(197, 143, 117, .5);
+    background-color: rgba(197, 143, 117, 0.5);
 }
 .m8zx span {
     font-size: .75rem;
     line-height: .75rem;
-
     color: #ca785e;
 }
 .m8zx img:last-child {
@@ -987,7 +864,6 @@ body {
     position: absolute;
     bottom: 0;
     left: 5.175rem;
-
     width: 5.625rem;
     height: 1.8rem;
 }
@@ -998,7 +874,6 @@ body {
     position: absolute;
     top: 5.325rem;
     left: 0;
-
     width: 2.1rem;
 }
 .m5ul .m5l2 img:last-child,
