--- a/static.hzshuangmei.com/css/m/xbnset/bnsfet.css
+++ b/static.hzshuangmei.com/css/m/xbnset/bnsfet.css
@@ -224,7 +224,7 @@ body {
     line-height: .975rem;
     color: #ca785e;
 }
-.mbnsetcon a img {
+.mbnsetcon a img:last-child{
     width: .575rem;
     margin-left: .55rem;
 }
@@ -395,6 +395,15 @@ body {
     height: 1.55rem;
     margin-top: -0.775rem;
     margin-left: .7rem;
+}
+.m4 .m4l1{
+    background-color: rgba(255,255,255,0.06);
+}
+.m4 .m4l4{
+    background-color: rgba(255,255,255,0.08);
+}
+.m4 .m4l5{
+    background-color: rgba(255,255,255,0.09);
 }
 .m4l1 span,
 .m4l4 span,
